Added locales and translations

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,7 +1,38 @@
 {
+  "Action.component.message": "Action",
+  "AddNew.component.message": "Add New",
   "App.component.message": "App",
-  "Footer.component.message": "rights Josh software pvt.ltd",
+  "Attendance.component.message": "Attendance",
+  "AttendanceComponent.component.message": "AttendanceComponent",
+  "CancelButtonText.component.message": "Cancel",
+  "Class.component.message": "Class",
+  "ConfirmButtonText.component.message": "Submit",
+  "ConfirmSubmitAttendance.component.message": "Confirm Submit Attendance",
+  "ConfirmationText.component.message": "Are you sure you want to submit attendance?",
+  "Dashboard.component.message": "Dashboard",
+  "DefaultFooter.component.message": "Josh Software Pvt. Ltd.",
+  "DefaultFooterLanguage.component.message": "Language:",
+  "Devision.component.message": "Division",
+  "Division.component.message": "Division",
+  "Filters.component.message": "Filters",
+  "First.component.message": "First",
+  "Footer.component.message": "Josh Software Pvt. Ltd",
   "ForgotPassword.component.message": "Forgot password?",
+  "Language.component.message": "Language:",
+  "Last.component.message": "Last",
+  "Layout.component.message": "Layout",
   "Login.component.message": "Login",
-  "SigninAccount.component.message": "Sign In to your account"
+  "Logout.component.message": "Logout",
+  "Mobile.component.message": "Mobile No",
+  "Name.component.message": "Name",
+  "New.component.message": "New",
+  "Reset.component.message": "Reset",
+  "RollNo.component.message": "Roll No",
+  "Search.component.message": "Search",
+  "Setting.component.message": "Setting",
+  "SigninAccount.component.message": "Sign In to your account",
+  "Student.component.message": "Students",
+  "StudentNewComponent.component.message": "StudentNewComponent",
+  "Students.component.message": "Students",
+  "SubmitAttendance.component.message": "Submit"
 }
