--- a/src/i18n/locales/mr.json
+++ b/src/i18n/locales/mr.json
@@ -1,7 +1,38 @@
 {
+  "Action.component.message": "क्रिया",
+  "AddNew.component.message": "नवीन जोडा",
   "App.component.message": "अॅप",
-  "Footer.component.message": "rights Josh software pvt.ltd",
+  "Attendance.component.message": "उपस्थिती",
+  "Attendance.component.message": "उपस्थिती",
+  "CancelButtonText.component.message": "रद्द करा",
+  "Class.component.message": "वर्ग",
+  "ConfirmButtonText.component.message": "सबमिट करा",
+  "ConfirmSubmitAttendance.component.message": "उपस्थित सादर कराची पुष्टी करा",
+  "ConfirmationText.component.message": "तुम्हाला खात्री आहे, आपण उपस्थिती सबमिट करू इच्छिता?",
+  "Dashboard.component.message": "डॅशबोर्ड",
+  "DefaultFooter.component.message": "जोश सॉफ्टवेयर प्रा. लि",
+  "DefaultFooterLanguage.component.message": "भाषा",
+  "Devision.component.message": "विभागणी",
+  "Division.component.message": "विभागणी",
+  "Filters.component.message": "फिल्टर",
+  "First.component.message": "प्रथम",
+  "Footer.component.message": "जोश सॉफ्टवेयर प्रा. लि",
   "ForgotPassword.component.message": "पासवर्ड विसरलात?",
+  "Language.component.message": "भाषा:",
+  "Last.component.message": "अंतिम",
+  "Layout.component.message": "मांडणी",
   "Login.component.message": "लॉग इन",
-  "SigninAccount.component.message": "आपल्या खात्यात साइन इन करा"
+  "Logout.component.message": "बाहेर पडणे",
+  "Mobile.component.message": "मोबाइल नंबर",
+  "Name.component.message": "नाव",
+  "New.component.message": "नवीन",
+  "Reset.component.message": "रीसेट करा",
+  "RollNo.component.message": "रोल क्रमांक",
+  "Search.component.message": "शोध",
+  "Setting.component.message": "सेट करत आहे",
+  "SigninAccount.component.message": "आपल्या खात्यात साइन इन करा",
+  "Student.component.message": "विद्यार्थी",
+  "StudentNewComponent.component.message": "विद्यार्थी",
+  "Students.component.message": "विद्यार्थी",
+  "SubmitAttendance.component.message": "सबमिट करा"
 }
