-Removed debugger -Changed Logo

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -2,7 +2,7 @@
   "Action.component.message": "Action",
   "AddNew.component.message": "Add New",
   "App.component.message": "App",
-  "Attendance.component.message": "Attendance",
+  "Attendance.component.message": "Mark Attendance",
   "AttendanceComponent.component.message": "AttendanceComponent",
   "Cancel.component.message": "Cancel",
   "CancelButtonText.component.message": "Cancel",
