--- a/src/i18n/locales/mr.json
+++ b/src/i18n/locales/mr.json
@@ -2,7 +2,7 @@
   "Action.component.message": "क्रिया",
   "AddNew.component.message": "नवीन जोडा",
   "App.component.message": "अॅप",
-  "Attendance.component.message": "उपस्थिती",
+  "Attendance.component.message": "हजेरी लावा",
   "AttendanceComponent.component.message": "Attendance",
   "CancelButtonText.component.message": "रद्द करा",
   "Class.component.message": "वर्ग",
@@ -14,7 +14,7 @@
   "DefaultFooterLanguage.component.message": "भाषा",
   "Devision.component.message": "विभागणी",
   "Division.component.message": "विभागणी",
-  "File.component.message": "File",
+  "File.component.message": "फाइल",
   "Filters.component.message": "फिल्टर",
   "First.component.message": "प्रथम",
   "Footer.component.message": "जोश सॉफ्टवेयर प्रा. लि",
