--- a/src/i18n/locales/mr.json
+++ b/src/i18n/locales/mr.json
@@ -2,18 +2,18 @@
   "Action.component.message": "क्रिया",
   "AddNew.component.message": "नवीन जोडा",
   "App.component.message": "अॅप",
-  "Attendance.component.message": "हजेरी लावा",
+  "Attendance.component.message": "हजेरी नोंदवा",
   "AttendanceComponent.component.message": "Attendance",
   "CancelButtonText.component.message": "रद्द करा",
   "Class.component.message": "वर्ग",
-  "ConfirmButtonText.component.message": "सबमिट करा",
+  "ConfirmButtonText.component.message": "नोंद करा",
   "ConfirmSubmitAttendance.component.message": "उपस्थित सादर कराची पुष्टी करा",
   "ConfirmationText.component.message": "तुम्हाला खात्री आहे, आपण उपस्थिती सबमिट करू इच्छिता?",
   "Dashboard.component.message": "डॅशबोर्ड",
   "DefaultFooter.component.message": "जोश सॉफ्टवेयर प्रा. लि",
   "DefaultFooterLanguage.component.message": "भाषा",
-  "Devision.component.message": "विभागणी",
-  "Division.component.message": "विभागणी",
+  "Devision.component.message": "तुकडी",
+  "Division.component.message": "तुकडी",
   "File.component.message": "फाइल",
   "Filters.component.message": "फिल्टर",
   "First.component.message": "प्रथम",
@@ -28,14 +28,14 @@
   "Name.component.message": "नाव",
   "New.component.message": "नवीन",
   "Reset.component.message": "रीसेट करा",
-  "RollNo.component.message": "रोल क्रमांक",
+  "RollNo.component.message": "हजेरी क्रमांक",
   "Search.component.message": "शोध",
   "Setting.component.message": "सेट करत आहे",
   "SigninAccount.component.message": "आपल्या खात्यात साइन इन करा",
   "Student.component.message": "विद्यार्थी",
   "StudentNewComponent.component.message": "विद्यार्थी",
   "Students.component.message": "विद्यार्थी",
-  "SubmitAttendance.component.message": "सबमिट करा",
+  "SubmitAttendance.component.message": "नोंद करा",
   "UploadHeader.component.message": "विद्यार्थी डेटा अपलोड करा",
   "Upload.component.message": "अपलोड करा",
   "Cancel.component.message": "रद्द करा"
